src/main/java/com/jason798/hbase/antlr/SQLGrammerParser.java
// Generated from SQLGrammer.g4 by ANTLR 4.5.3
package com.jason798.hbase.antlr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLGrammerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, SELECT=3, UPDATE=4, DELETE=5, FROM=6, WHERE=7, STAR=8, 
		LB=9, RB=10, SET=11, ROWKEY=12, STARTKEY=13, ENDKEY=14, MAXVERSION=15, 
		LIMIT=16, TS=17, STARTTS=18, ENDTS=19, IS=20, NULL=21, NOT=22, AND=23, 
		OR=24, EQ=25, LESSEQUAL=26, LESS=27, GREATEREQUAL=28, GREATER=29, NOTEQUAL=30, 
		EQUAL=31, NOTMATCH=32, MATCH=33, IN=34, NOTIN=35, BETWEEN=36, NOTBETWEEN=37, 
		ISNULL=38, ISNOTNULL=39, ISMISSING=40, ISNOTMISSING=41, Double_Quote=42, 
		Quote=43, Underscore=44, Period=45, POSITIVE=46, NATURAL=47, Regular_Identifier=48, 
		Data_Value=49, WS=50;
	public static final int
		RULE_prog = 0, RULE_selectSql = 1, RULE_deleteSql = 2, RULE_updateSql = 3, 
		RULE_assignList = 4, RULE_wherec = 5, RULE_conditionc = 6, RULE_specrowkey = 7, 
		RULE_rowkeyrange = 8, RULE_rowkeyexp = 9, RULE_tsrange = 10, RULE_tsexp = 11, 
		RULE_columnList = 12, RULE_funcname = 13, RULE_constantList = 14, RULE_constant2List = 15, 
		RULE_constant2 = 16, RULE_maxversionexp = 17, RULE_limitexp = 18, RULE_maxversion = 19, 
		RULE_constant = 20, RULE_var = 21, RULE_table_name = 22, RULE_column_name = 23, 
		RULE_values = 24;
	public static final String[] ruleNames = {
		"prog", "selectSql", "deleteSql", "updateSql", "assignList", "wherec", 
		"conditionc", "specrowkey", "rowkeyrange", "rowkeyexp", "tsrange", "tsexp", 
		"columnList", "funcname", "constantList", "constant2List", "constant2", 
		"maxversionexp", "limitexp", "maxversion", "constant", "var", "table_name", 
		"column_name", "values"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'#'", null, null, null, null, null, "'*'", "'('", "')'", 
		null, null, null, null, "'maxversion'", null, null, null, null, null, 
		null, null, null, null, "'='", "'lessequal'", "'less'", "'greaterequal'", 
		"'greater'", "'notequal'", "'equal'", "'notmatch'", "'match'", "'in'", 
		"'notin'", "'between'", "'notbetween'", "'isnull'", "'isnotnull'", "'ismissing'", 
		"'isnotmissing'", "'\"'", "'''", "'_'", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "SELECT", "UPDATE", "DELETE", "FROM", "WHERE", "STAR", 
		"LB", "RB", "SET", "ROWKEY", "STARTKEY", "ENDKEY", "MAXVERSION", "LIMIT", 
		"TS", "STARTTS", "ENDTS", "IS", "NULL", "NOT", "AND", "OR", "EQ", "LESSEQUAL", 
		"LESS", "GREATEREQUAL", "GREATER", "NOTEQUAL", "EQUAL", "NOTMATCH", "MATCH", 
		"IN", "NOTIN", "BETWEEN", "NOTBETWEEN", "ISNULL", "ISNOTNULL", "ISMISSING", 
		"ISNOTMISSING", "Double_Quote", "Quote", "Underscore", "Period", "POSITIVE", 
		"NATURAL", "Regular_Identifier", "Data_Value", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SQLGrammer.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SQLGrammerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SelectSqlStmtContext extends ProgContext {
		public SelectSqlContext selectSql() {
			return getRuleContext(SelectSqlContext.class,0);
		}
		public SelectSqlStmtContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterSelectSqlStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitSelectSqlStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitSelectSqlStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UpdateSqlStmtContext extends ProgContext {
		public UpdateSqlContext updateSql() {
			return getRuleContext(UpdateSqlContext.class,0);
		}
		public UpdateSqlStmtContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterUpdateSqlStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitUpdateSqlStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitUpdateSqlStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeleteSqlStmtContext extends ProgContext {
		public DeleteSqlContext deleteSql() {
			return getRuleContext(DeleteSqlContext.class,0);
		}
		public DeleteSqlStmtContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterDeleteSqlStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitDeleteSqlStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitDeleteSqlStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			setState(53);
			switch (_input.LA(1)) {
			case SELECT:
				_localctx = new SelectSqlStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				selectSql();
				}
				break;
			case DELETE:
				_localctx = new DeleteSqlStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				deleteSql();
				}
				break;
			case UPDATE:
				_localctx = new UpdateSqlStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				updateSql();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectSqlContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(SQLGrammerParser.SELECT, 0); }
		public ColumnListContext columnList() {
			return getRuleContext(ColumnListContext.class,0);
		}
		public TerminalNode FROM() { return getToken(SQLGrammerParser.FROM, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public RowkeyrangeContext rowkeyrange() {
			return getRuleContext(RowkeyrangeContext.class,0);
		}
		public WherecContext wherec() {
			return getRuleContext(WherecContext.class,0);
		}
		public MaxversionexpContext maxversionexp() {
			return getRuleContext(MaxversionexpContext.class,0);
		}
		public TsrangeContext tsrange() {
			return getRuleContext(TsrangeContext.class,0);
		}
		public LimitexpContext limitexp() {
			return getRuleContext(LimitexpContext.class,0);
		}
		public SelectSqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectSql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterSelectSql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitSelectSql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitSelectSql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectSqlContext selectSql() throws RecognitionException {
		SelectSqlContext _localctx = new SelectSqlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_selectSql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(SELECT);
			setState(56);
			columnList();
			setState(57);
			match(FROM);
			setState(58);
			table_name();
			setState(60);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(59);
				wherec();
				}
			}

			setState(62);
			rowkeyrange();
			setState(64);
			_la = _input.LA(1);
			if (_la==MAXVERSION) {
				{
				setState(63);
				maxversionexp();
				}
			}

			setState(67);
			_la = _input.LA(1);
			if (_la==STARTTS || _la==ENDTS) {
				{
				setState(66);
				tsrange();
				}
			}

			setState(70);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(69);
				limitexp();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeleteSqlContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(SQLGrammerParser.DELETE, 0); }
		public ColumnListContext columnList() {
			return getRuleContext(ColumnListContext.class,0);
		}
		public TerminalNode FROM() { return getToken(SQLGrammerParser.FROM, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public RowkeyrangeContext rowkeyrange() {
			return getRuleContext(RowkeyrangeContext.class,0);
		}
		public WherecContext wherec() {
			return getRuleContext(WherecContext.class,0);
		}
		public TerminalNode TS() { return getToken(SQLGrammerParser.TS, 0); }
		public TerminalNode IS() { return getToken(SQLGrammerParser.IS, 0); }
		public TsexpContext tsexp() {
			return getRuleContext(TsexpContext.class,0);
		}
		public DeleteSqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deleteSql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterDeleteSql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitDeleteSql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitDeleteSql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeleteSqlContext deleteSql() throws RecognitionException {
		DeleteSqlContext _localctx = new DeleteSqlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_deleteSql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(DELETE);
			setState(73);
			columnList();
			setState(74);
			match(FROM);
			setState(75);
			table_name();
			setState(77);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(76);
				wherec();
				}
			}

			setState(79);
			rowkeyrange();
			setState(83);
			_la = _input.LA(1);
			if (_la==TS) {
				{
				setState(80);
				match(TS);
				setState(81);
				match(IS);
				setState(82);
				tsexp();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UpdateSqlContext extends ParserRuleContext {
		public TerminalNode UPDATE() { return getToken(SQLGrammerParser.UPDATE, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public TerminalNode SET() { return getToken(SQLGrammerParser.SET, 0); }
		public AssignListContext assignList() {
			return getRuleContext(AssignListContext.class,0);
		}
		public SpecrowkeyContext specrowkey() {
			return getRuleContext(SpecrowkeyContext.class,0);
		}
		public UpdateSqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_updateSql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterUpdateSql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitUpdateSql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitUpdateSql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UpdateSqlContext updateSql() throws RecognitionException {
		UpdateSqlContext _localctx = new UpdateSqlContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_updateSql);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(UPDATE);
			setState(86);
			table_name();
			setState(87);
			match(SET);
			setState(88);
			assignList();
			setState(89);
			specrowkey();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignListContext extends ParserRuleContext {
		public List<Column_nameContext> column_name() {
			return getRuleContexts(Column_nameContext.class);
		}
		public Column_nameContext column_name(int i) {
			return getRuleContext(Column_nameContext.class,i);
		}
		public List<TerminalNode> EQ() { return getTokens(SQLGrammerParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(SQLGrammerParser.EQ, i);
		}
		public List<ValuesContext> values() {
			return getRuleContexts(ValuesContext.class);
		}
		public ValuesContext values(int i) {
			return getRuleContext(ValuesContext.class,i);
		}
		public AssignListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterAssignList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitAssignList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitAssignList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignListContext assignList() throws RecognitionException {
		AssignListContext _localctx = new AssignListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			column_name();
			setState(92);
			match(EQ);
			setState(93);
			values();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(94);
				match(T__0);
				setState(95);
				column_name();
				setState(96);
				match(EQ);
				setState(97);
				values();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WherecContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(SQLGrammerParser.WHERE, 0); }
		public ConditioncContext conditionc() {
			return getRuleContext(ConditioncContext.class,0);
		}
		public WherecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wherec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterWherec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitWherec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitWherec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WherecContext wherec() throws RecognitionException {
		WherecContext _localctx = new WherecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_wherec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(WHERE);
			setState(105);
			conditionc(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditioncContext extends ParserRuleContext {
		public ConditioncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionc; }
	 
		public ConditioncContext() { }
		public void copyFrom(ConditioncContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NotequalvarContext extends ConditioncContext {
		public Column_nameContext column_name() {
			return getRuleContext(Column_nameContext.class,0);
		}
		public TerminalNode NOTEQUAL() { return getToken(SQLGrammerParser.NOTEQUAL, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public NotequalvarContext(ConditioncContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterNotequalvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitNotequalvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitNotequalvar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LessequalvarContext extends ConditioncContext {
		public Column_nameContext column_name() {
			return getRuleContext(Column_nameContext.class,0);
		}
		public TerminalNode LESSEQUAL() { return getToken(SQLGrammerParser.LESSEQUAL, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public LessequalvarContext(ConditioncContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterLessequalvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitLessequalvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitLessequalvar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotmatchvarContext extends ConditioncContext {
		public Column_nameContext column_name() {
			return getRuleContext(Column_nameContext.class,0);
		}
		public TerminalNode NOTMATCH() { return getToken(SQLGrammerParser.NOTMATCH, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public NotmatchvarContext(ConditioncContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterNotmatchvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).exitNotmatchvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLGrammerVisitor ) return ((SQLGrammerVisitor<? extends T>)visitor).visitNotmatchvar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotbetweenvarContext extends ConditioncContext {
		public Column_nameContext column_name() {
			return getRuleContext(Column_nameContext.class,0);
		}
		public TerminalNode NOTBETWEEN() { return getToken(SQLGrammerParser.NOTBETWEEN, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode AND() { return getToken(SQLGrammerParser.AND, 0); }
		public NotbetweenvarContext(ConditioncContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLGrammerListener ) ((SQLGrammerListener)listener).enterNotbetweenvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
